Fix spacing in css code

--- a/css/main.css
+++ b/css/main.css
@@ -129,8 +129,8 @@ a:hover {
   border-color: #999;
   border-radius: 4px;
   padding: 2em;
-  padding-top: 0em;
-  padding-bottom: 0em;
+  padding-top: 0;
+  padding-bottom: 0;
   margin-right: 1rem;
 }
 
@@ -280,8 +280,8 @@ ul {
 
 .medium {
   background-color: #ccc;
-  padding-bottom: 2rem;
   padding: 2rem;
+  padding-bottom: 2rem;
 }
 
 .dark {
@@ -293,41 +293,31 @@ h2 {
   margin-bottom: 0;
 }
 
-  .small-text {
-    font-size: 75%;
-  }
+.small-text {
+  font-size: 75%;
+}
 
-  .button-m {
-    border: 3px solid #ccc;
-    background-color: #333;
-    border-radius: 8px;
-    text-decoration: none;
-    padding: .3em 1em .3em;
-    font-size: .875rem;
-  }
+.button-m {
+  border: 3px solid #ccc;
+  background-color: #333;
+  border-radius: 8px;
+  text-decoration: none;
+  padding: .3em 1em;
+  font-size: .875rem;
+}
 
-  .button-m:hover {
-    border-color: #fe1616;
-    background-color: #fb3a3a;
-  }
+.button-m:hover {
+  border-color: #fe1616;
+  background-color: #fb3a3a;
+}
 
-  .no-margin {
-    margin: 0;
-  }
+.no-margin {
+  margin: 0;
+}
 
-  .circle-text {
-    padding-left: 1rem;
-  }
-
-  .circle-text {
-    background-color: rgba(0, 0, 0, .3);
-    position: fixed;
-    max-width: 50%;
-    width: 50%;
-    text-align: right;
-    right: 13px;
-    top: 35rem;
-  }
+.circle-text {
+  text-align: center;
+}
 
 @media only screen and (min-width: 25em) {
 
@@ -355,21 +345,9 @@ h2 {
     margin: 0 0 1.4rem;
   }
 
-  .circle-text {
-    background-color: rgba(0, 0, 0, .3);
-    color: #fff;
-    position: fixed;
-    max-width: 50%;
-    width: 35%;
-    text-align: right;
-    padding-right: 1rem;
-    right: 13px;
-    top: 25rem;
-  }
-
   .person-circle {
     position: relative;
-    top: 0rem;
+    top: 0;
     left: 33.33%;
   }
 
@@ -391,7 +369,7 @@ h2 {
     display: inline-block;
     flex-wrap: wrap;
     text-align: left;
-    margin-left: 5rem;
+    margin-left: 5em;
   }
 
   .light {
@@ -432,7 +410,7 @@ h2 {
     width: 33.33%;
     flex-direction: column;
     justify-content: space-between;
-    margin: 0
+    margin: 0;
   }
 
   .candy-text > h2 {
@@ -449,6 +427,18 @@ h2 {
 
   .img-large {
     display: block;
+  }
+
+  .circle-text {
+    background-color: rgba(0, 0, 0, .3);
+    color: #fff;
+    position: fixed;
+    max-width: 50%;
+    width: 35%;
+    text-align: right;
+    padding-right: 1rem;
+    right: 13px;
+    top: 30rem;
   }
 
 }
